@@ -184,14 +184,14 @@
                  (specializer2 (second specializers)))
             (and (atom specializer1) (subclassp class specializer1)
                  (typep 'T specializer2))))
-      (gf-methods |#'shared-initialize|))
+      (the list (gf-methods |#'shared-initialize|)))
      ;; list of all applicable methods from INITIALIZE-INSTANCE
      (remove-if-not
       #'(lambda (method)
           (let ((specializer
                  (first (std-method-parameter-specializers method))))
             (and (atom specializer) (subclassp class specializer))))
-      (gf-methods |#'initialize-instance|))
+      (the list (gf-methods |#'initialize-instance|)))
      ;; list of all applicable methods from ALLOCATE-INSTANCE
      (remove-if-not
       #'(lambda (method)
@@ -200,7 +200,7 @@
             (if (consp specializer)
               (eql class (second specializer))
               (typep-class class specializer)))) ; <==> (typep class specializer)
-      (gf-methods |#'allocate-instance|)))))
+      (the list (gf-methods |#'allocate-instance|))))))
 (defun make-instance-table-entry1 (class)
   (values (valid-make-instance-keywords class)
           (compute-effective-method |#'allocate-instance| class)))
@@ -224,14 +224,14 @@
                    (specializer2 (second specializers)))
               (and (atom specializer1) (subclassp class specializer1)
                    (typep 'NIL specializer2))))
-        (gf-methods |#'shared-initialize|))
+        (the list (gf-methods |#'shared-initialize|)))
       ;; list of all applicable methods from REINITIALIZE-INSTANCE
       (remove-if-not
         #'(lambda (method)
             (let ((specializer
                     (first (std-method-parameter-specializers method))))
               (and (atom specializer) (subclassp class specializer))))
-        (gf-methods |#'reinitialize-instance|)))))
+        (the list (gf-methods |#'reinitialize-instance|))))))
 
 ;; For UPDATE-INSTANCE-FOR-REDEFINED-CLASS the following is necessary as keys:
 ;; - the initargs that are used for the initialization of slots,
@@ -256,7 +256,7 @@
                          (when (or (consp specializer2) (eq specializer2 <null>))
                            (setq independent nil))
                          (typep added-slots specializer2)))))
-            (gf-methods |#'shared-initialize|))
+            (the list (gf-methods |#'shared-initialize|)))
           ;; list of all applicable methods from UPDATE-INSTANCE-FOR-REDEFINED-CLASS
           (remove-if-not
             #'(lambda (method)
@@ -276,7 +276,7 @@
                          (and (typep added-slots specializer2)
                               (typep discarded-slots specializer3)
                               (typep property-list specializer4))))))
-            (gf-methods |#'update-instance-for-redefined-class|))))
+            (the list (gf-methods |#'update-instance-for-redefined-class|)))))
       independent)))
 
 ;; For UPDATE-INSTANCE-FOR-DIFFERENT-CLASS the following is necessary as keys:
@@ -295,7 +295,7 @@
                    (specializer2 (second specializers)))
               (and (atom specializer1) (subclassp new-class specializer1)
                    (typep added-slots specializer2))))
-        (gf-methods |#'shared-initialize|))
+        (the list (gf-methods |#'shared-initialize|)))
       ;; list of all applicable methods from UPDATE-INSTANCE-FOR-DIFFERENT-CLASS
       (remove-if-not
         #'(lambda (method)
@@ -304,7 +304,7 @@
                    (specializer2 (second specializers)))
               (and (atom specializer1) (subclassp old-class specializer1)
                    (atom specializer2) (subclassp new-class specializer2))))
-        (gf-methods |#'update-instance-for-different-class|)))))
+        (the list (gf-methods |#'update-instance-for-different-class|))))))
 
 ;; Also in record.d.
 (defun check-initialization-argument-list (initargs caller)
